@@ -32,6 +32,6 @@ SCRATCH_DIR=/pylon5/cc4s86p/fli5/data_broker_adios/${SLURM_JOBID}
 
 export MyTransport=ADIOS_STAGING_DSPACES
 
-source ${PBS_O_WORKDIR}/scripts_bridges/common.sh
+source ${PBS_O_WORKDIR}/scripts_bridges/adios_staging.sh
 
 
