@@ -27,5 +27,5 @@ SCRATCH_DIR=/pylon5/cc4s86p/fli5/data_broker_adios/${SLURM_JOBID}
 
 export MyTransport=ADIOS_DISK_MPIIO
 
-source ${PBS_O_WORKDIR}/scripts_bridges/common_mpiio.sh
+source ${PBS_O_WORKDIR}/scripts_bridges/adios_disk.sh
 
