@@ -31,6 +31,6 @@ SCRATCH_DIR=/pylon5/cc4s86p/fli5/data_broker_adios/${SLURM_JOBID}
 export MyTransport=NATIVE_STAGING_DIMES
 
 #source ${PBS_O_WORKDIR}/scripts_bridges/common.sh
-source ${PBS_O_WORKDIR}/scripts_bridges/raw_dspaces.sh
+source ${PBS_O_WORKDIR}/scripts_bridges/native_staging.sh
 
 
